fixing overlap

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -2151,9 +2151,6 @@ hr {
 }
 .agent-email {
 	width: auto;
-	position: absolute;
-	bottom: 5px;
-	left: 5px;
 	z-index: 55;
 	font-size: 10px;
 	a {
